# c--task-management

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake_build_system_message.cmake  cplusplus-task-management.code-workspace  dependency_checks.cmake  os_host_setup.cmake  temp.cmake
Documentation/: CMakeLists.txt  cpp-task-mgmt-task-lifecycle.odg
Notes/: Add config option to set.txt  Have some way to map task.txt  README.md  Task lifecycle stages.txt  include unordered map.txt  initialization_notes.txt  mailing.txt  mailing2.txt  notes.txt  process_signals.txt  singal_handling_prototype.cpp  task_controller.txt  task_object_management.txt  task_scheduling.txt
Notes/chatgpt_rubber_ducky/: README.md  task-system-12-23-2024.txt  task-system-2-12-23-2024.txt
include/data_handling/: datacollection.hpp  datahouse.hpp  serialization.hpp  vectorreadwrapper.hpp  vectorreadwrapperiterator.hpp  vectorwrapper.hpp  vectorwrapperiteratorbase.hpp  vectorwritewrapper.hpp
include/internal/task-controller/: taskcontroller.hpp
include/messaging/: letter.hpp  mailbox.hpp
include/messaging/application_layer/: baseletter.hpp  letter.hpp  utilityletter.hpp
include/messaging/routing/: mailbox.hpp  mailboxletterpackage.hpp  mailboxpackage.hpp  mailboxutilitypackage.hpp  rootmailbox.hpp
include/messaging/routing/descriptors/: mailbox_package_types.hpp  mailbox_transmission_types.hpp  mailbox_utility_package_types.hpp
include/task-runner/: taskrunner.hpp  taskrunnerhandle.hpp
include/tasks/: task.hpp
scripts/: CMakeLists.txt
scripts/cmake/: build_sys_opts.cmake  common.cmake  dir_opts.cmake  gen_launch_json_args.cmake  stack.cmake
scripts/scripts_tests/: CMakeLists.txt
scripts/scripts_tests/cmake/: CMakeLists.txt  common.cmake  test_get_dirs_with_cmake_lists.cmake
scripts/scripts_tests/cmake/test_helpers/: timeout_test_get_dirs_with_cmake_lists.cmake
scripts/scripts_tests/cmake/test_helpers/test_get_dirs_with_cmake_lists_timeout/: CMakeLists.txt
src/: CMakeLists.txt
src/data_handling/: CMakeLists.txt  vectorreadwrapper.cpp  vectorreadwrapperiterator.cpp  vectorwrapper.cpp  vectorwrapperiteratorbase.cpp  vectorwritewrapper.cpp
src/internal/system_specific/: CMakeLists.txt
src/messaging/: CMakeLists.txt
src/messaging/routing/: CMakeLists.txt  mailbox.cpp  mailboxletterpackage.cpp  mailboxpackage.cpp  mailboxutilitypackage.cpp
src/tasks/: CMakeLists.txt  task.cpp
tests/: CMakeLists.txt
tests/data_handling/: CMakeLists.txt
tests/data_handling/vectorwrappers/: CMakeLists.txt  vectorreadwrappertests.cpp  vectorwrappertests.cpp  vectorwritewrappertests.cpp
tests/include/: test_config.hpp
tests/include/vectorwrappers/: vectorreadwrappertest.hpp  vectorwrappertest.hpp  vectorwritewrappertest.hpp
tests/messaging/: CMakeLists.txt
tests/messaging/basic_functionality/: CMakeLists.txt  message_passing.cpp
tests/messaging/direct_messaging/: CMakeLists.txt  message_passing.cpp
